RESOLVED FIXED54813
[EFL] Eliminated error when .webkit directory doesn't exist
https://bugs.webkit.org/show_bug.cgi?id=54813
Summary [EFL] Eliminated error when .webkit directory doesn't exist
Lukasz Slachciak
Reported 2011-02-19 14:12:43 PST
During initialization in _ewk_init_body ewk_settings_icon_database_path_set was called for the non-existing path It resulted in error like: ERR<30121>:ewebkit /home/lukasz/sources/WebKit/WebKit/Source/WebKit/efl/ewk/ewk_settings.cpp:144 ewk_settings_icon_database_path_set() could not stat(/home/lukasz/.webkit): No such file or directory Now standard POSIX-implementation of WebCore::makeAllDirectories method is used to make sure that path is ready
Attachments
Make all dir patch (1.40 KB, patch)
2011-02-19 14:16 PST, Lukasz Slachciak
no flags
Lukasz Slachciak
Comment 1 2011-02-19 14:16:28 PST
Created attachment 83083 [details] Make all dir patch
Andreas Kling
Comment 2 2011-02-19 15:21:05 PST
Comment on attachment 83083 [details] Make all dir patch r=me
WebKit Commit Bot
Comment 3 2011-02-19 16:44:58 PST
Comment on attachment 83083 [details] Make all dir patch Clearing flags on attachment: 83083 Committed r79143: <http://trac.webkit.org/changeset/79143>
WebKit Commit Bot
Comment 4 2011-02-19 16:45:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.