2011-02-19  Lukasz Slachciak  <l.slachciak@samsung.com>

Reviewed by Andreas Kling.

        [EFL] Eliminated error when .webkit directory doesn't exist.
        https://bugs.webkit.org/show_bug.cgi?id=54813

        * ewk/ewk_main.cpp:
        (_ewk_init_body):

Canonical link: https://commits.webkit.org/69081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79143 268f45cc-cd09-0410-ab3c-d52691b4dbfc