Source/WebKit/efl/ewk/ewk_main.cpp
@@ -171,10 +171,12 @@ Eina_Bool _ewk_init_body(void)
     }
 
     WTF::String wkdir = home + "/.webkit";
-    ewk_settings_web_database_path_set(wkdir.utf8().data());
-    ewk_settings_icon_database_path_set(wkdir.utf8().data());
+    if (WebCore::makeAllDirectories(wkdir)) {
+        ewk_settings_web_database_path_set(wkdir.utf8().data());
+        ewk_settings_icon_database_path_set(wkdir.utf8().data());
 
-    WebCore::cacheStorage().setCacheDirectory(wkdir);
+        WebCore::cacheStorage().setCacheDirectory(wkdir);
+    }
 
     // TODO: this should move to WebCore, already reported to webkit-gtk folks:
 #ifdef WTF_USE_SOUP
